tests/errors/surf_arity_03.ki
# positional argument after a keyword argument
var f = Function(a, b):
    return a
discard f(a = 1, 2)
